<resources>
    <string name="app_name">ExamScanner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>

    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>
    <string name="start_scan_exam">Quick and dirty scan exam</string>
    <string name="resolve">Resolve</string>
    <string name="retake">Retake</string>
    <string name="approve">Approve</string>
    <string name="resolve_answers">Resolve Answers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="answers_is_1">1</string>
    <string name="answers_is_5">5</string>
    <string name="answers_is_6">6</string>
    <string name="answers_is_7">7</string>
    <string name="answers_is_no_answer">No Answer</string>
    <string name="answers_is_2">2</string>
    <string name="answers_is_3">3</string>
    <string name="answers_is_4">4</string>
    <string name="course_name">Course name:</string>
    <string name="term">Exam:</string>
    <string name="term_a">A</string>
    <string name="term_b">B</string>
    <string name="term_c">C</string>
    <string name="semester">Semester:</string>
    <string name="fall">Fall</string>
    <string name="spring">Spring</string>
    <string name="year">Year:</string>
    <string name="version_add_version">Add version:</string>
    <string name="choose_pdf">Choose pdf</string>
    <string name="version_number">Version number:</string>
    <string name="added">added</string>
    <string name="add_grader">Add grader:</string>
    <string name="add_grader_action">Add</string>
    <string name="create_the_exam">Create</string>
    <string name="year_2013">2013</string>
    <string name="hint_calculus">Calculus</string>
    <string name="hint_username">bob123@gmail.com</string>
    <string name="create_exam_dialog_exam_is_beeing_uploaded">Exam is being uploaded</string>
    <string name="create_exam_dialog_ok">OK</string>
    <string name="home_would_you_like_to_resume">Would you like resume your last session?</string>
    <string name="home_dialog_yes">Yes</string>
    <string name="detect_corners_version_number_hint">version#</string>
    <string name="detect_corners_please_choose_version">Please choose version</string>
    <string name="detect_corners_ok">OK</string>
    <string name="detect_corners_the_empty_version_choice">Choose version</string>
    <string name="add_version_action">Add</string>
    <string name="menu_logout">Logout</string>
    <string name="button_main_activity_logout">Logout</string>
    <string name="nums_questions">Number of questions:</string>
    <string name="create_exam_dialog_version_scanned_result">Scanning result</string>
    <string name="create_exam_version_scanned_dialog_confirm">Confirm</string>
    <string name="create_exam_version_scanned_dialog_try_again">Try again</string>
    <string name="capture_examinee_id">Examinee Id</string>
    <string name="capture_the_empty_version_choice">version#</string>
    <string name="approve_scan">Approve</string>
    <string name="retake_scan">Retake</string>
    <string name="resume_your_last_session_yes">YES</string>
    <string name="choose_spreedsheet">Spreadsheet</string>
    <string name="choose_spreed_sheet">Add</string>
    <string name="done_batch">Done scanning batch!</string>
    <string name="stage_back_to_home">Back to home</string>
    <string name="stage_start_another_batch">Scan some more</string>
    <string name="resolve_scan">Resolve</string>
    <string name="examinee_id_duplication">This examinee already exist. Check spreadsheet to resolve the conflict.</string>
    <string name="delete_exam">Delete</string>
    <string name="admin_exam_deleted">Exam deleted!</string>
    <string name="crash">Crash</string>
    <string name="last_examinee_id_cheched">Last examinee checked: %s</string>
</resources>
