...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/for_testing_fragment_capture_root"
        android:layout_width="411dp"
        android:layout_height="0dp"
        android:background="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/capture_image_button"
            android:layout_width="94dp"
            android:layout_height="89dp"
            android:background="@drawable/ic_shutter"
            android:contentDescription="@string/capture_button_alt"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.512" />

        <Button
            android:id="@+id/button_move_to_detect_corners"
            android:layout_width="67dp"
            android:layout_height="62dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_next_step"
            app:layout_constraintBottom_toBottomOf="@+id/capture_image_button"
            app:layout_constraintEnd_toEndOf="parent"
...


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout6"
            android:layout_width="0dp"
            android:layout_height="491dp"
            app:layout_constraintBottom_toTopOf="@+id/spinner_capture_version_num"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.camera.view.PreviewView
                android:id="@+id/preview_view"
...
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/editText_capture_examineeId"
            android:layout_width="179dp"
            android:layout_height="88dp"
            android:ems="10"
            android:hint="@string/capture_examinee_id"
            android:inputType="date"
            app:layout_constraintBottom_toBottomOf="parent"
...
